src/test/deca/context/invalid/homemade/tests/test366_champ_inaccessible3.deca
// test invalide de la règle 3.66


class A{

    void calcul(int valeur){
        int x = 8;
        
    }
    
    
}


{
    A a = new A();
    a.x = 5;
}
